[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/menus/menu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 8.0
margin_right = 1.0
margin_bottom = 8.0
script = ExtResource( 1 )

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -177.0
margin_right = 400.0
margin_bottom = 23.0

[node name="PlayStandard" type="Button" parent="HSplitContainer"]
margin_right = 400.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 0 )
text = "Play"

[node name="PlayDebug" type="Button" parent="HSplitContainer"]
margin_left = 412.0
margin_right = 812.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 0 )
text = "Play (Debug)"

[node name="ScoreDisplay" type="RichTextLabel" parent="."]
margin_left = 427.0
margin_top = 388.0
margin_right = 627.0
margin_bottom = 588.0
text = "High Score: 000"

[node name="ClearScoreButton" type="Button" parent="."]
margin_left = 881.0
margin_top = 551.0
margin_right = 1004.0
margin_bottom = 571.0
rect_min_size = Vector2( 100, 0 )
text = "Clear High Scores"

[connection signal="pressed" from="HSplitContainer/PlayStandard" to="." method="on_Button_pressed" binds= [ "standard" ]]
[connection signal="pressed" from="HSplitContainer/PlayDebug" to="." method="on_Button_pressed" binds= [ "debug" ]]
